--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,39 @@
-# SQLite version 3.x
+﻿# SQLite version 3.x
 #   gem install sqlite3
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/database.sqlite3
+connection: &connection
+  adapter: postgresql
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: admin
+  host: localhost
+  port: 5432
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+development:
+  adapter: postgresql
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: admin
+  host: localhost
+  port: 5432
+  database: database
+
+test:
+  adapter: postgresql
+  pool: 5
+  username: postgres
+  password: admin
+  host: localhost
+  port: 5432
+  database: my_database_test
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: admin
+  host: localhost
+  port: 5432
+  database: database
